CLASSES-2329 Pull in jQuery and fix the width on mobile

--- a/groupersync/tool/src/webapp/stylesheets/groupersync.css
+++ b/groupersync/tool/src/webapp/stylesheets/groupersync.css
@@ -29,7 +29,7 @@ h3 {
 
 .subtable table {
     margin: 10px;
-    width: 880px;
+    max-width: 880px;
     background-color: white;
 }
 
